# Note-

./: CMakeLists.txt  README.md  new txt.txt
src/: CMakeLists.txt  main.cpp
src/models/: errorFile.h  file.cpp  file.h
src/views/: MainWindow.cpp  MainWindow.h
